# modern-python-template

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml  test.yml
my_package/: example.py
