[tool.poetry]
name = "modern-python-template"
version = "0.1.0"
description = "A Github template for python packages."
authors = ["Xiang Chen <xiangchenchen96@gmail.com>"]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/stradivari96/modern-python-template"
keywords = ["template", "python"]

# Pypi classifiers: https://pypi.org/classifiers/
# Add "Private :: Do Not Upload" to avoid accidental publish
classifiers = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

